# CGCourse

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENCE.txt  README.md  TODO.md
assets/shaders/: chapter01.frag  chapter01.vert  chapter0111.frag  chapter02.frag  chapter02.vert  chapter02_1.vert  chapter02_2.frag  chapter02_3.frag  chapter02_3.vert  chapter03.frag  chapter03.vert  chapter04.frag  chapter04.vert  chapter05.frag  chapter05.vert  chapter07.frag  chapter07.vert  chapter071.frag  chapter071.vert  chapter08.frag  chapter08.vert  chapter09.frag  chapter10.frag  chapter10.vert  chapter11.frag  chapter11.vert  chapter12.frag  chapter12.vert  chapter13.frag  chapter13.vert  chapter14.frag  chapter14.vert  chapter15.frag  chapter15.vert  guide.frag  guide.vert  guideMVP.vert  light_obj.frag  light_obj.vert
base/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraInput.hpp  ChapterPreamble.hpp  Debug.cpp  Debug.hpp  EventBus.hpp  EventTypes.hpp  File.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  PathUtils.cpp  PathUtils.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  ThreadPool.cpp  ThreadPool.hpp
bundledApp/: BundledApp.cpp  BundledApp.hpp  IChapter.hpp  main.cpp
chapters/: CMakeLists.txt
chapters/Chapter01/: Chapter01.cpp  Chapter01.hpp  main.cpp
chapters/Chapter01-Window/: Chapter01.cpp  Chapter01.hpp  README.md  main.cpp
chapters/Chapter02/: main.cpp
chapters/Chapter02-Point/: Chapter02.cpp  Chapter02.hpp  main.cpp
chapters/Chapter02.1-Point/: main.cpp
chapters/Chapter02.2-Triangle/: main.cpp
chapters/Chapter02.3-Colors/: main.cpp
chapters/Chapter02.4-Square/: main.cpp
chapters/Chapter02.5-IndexBuffer/: main.cpp
chapters/Chapter03/: main.cpp
chapters/Chapter03-Textures/: main.cpp
chapters/Chapter03-Triangle/: Chapter03.cpp  Chapter03.hpp  main.cpp
chapters/Chapter04-Colors/: Chapter04.cpp  Chapter04.hpp  main.cpp
chapters/Chapter04-Transformations/: main.cpp
chapters/Chapter04-TransformationsCube/: main.cpp
chapters/Chapter05-Camera/: main.cpp
chapters/Chapter05-Square/: Chapter05.cpp  Chapter05.hpp  main.cpp
chapters/Chapter06-FaceCulling/: main.cpp
chapters/Chapter06-LightingPhong/: main.cpp
chapters/Chapter06-Uniforms/: Chapter06.cpp  Chapter06.hpp  main.cpp
chapters/Chapter07-IndexBuffer/: Chapter07.cpp  Chapter07.hpp  main.cpp
chapters/Chapter07.1-LightingPhong/: main.cpp
chapters/Chapter08-Textures/: Chapter08.cpp  Chapter08.hpp  main.cpp
chapters/Chapter09-Transformations/: Chapter09.cpp  Chapter09.hpp  main.cpp
chapters/Chapter10-TransformationsCube/: Chapter10.cpp  Chapter10.hpp  main.cpp
chapters/Chapter11-Camera/: Chapter11.cpp  Chapter11.hpp  main.cpp
chapters/Chapter12-FaceCulling/: Chapter12.cpp  Chapter12.hpp  main.cpp
chapters/Chapter13-LightingPhong/: Chapter13.cpp  Chapter13.hpp  main.cpp
chapters/Chapter14-LightingBlinnPhong/: Chapter14.cpp  Chapter14.hpp  README.md  main.cpp
chapters/Chapter15-Materials/: Chapter15.cpp  Chapter15.hpp  MaterialPresets.hpp  README.md  main.cpp
chapters/Chapter37-TextRendering/: main.cpp
cmake/: ios.toolchain.cmake  platforms.cmake
platform/android/: build.gradle  build.ps1  gradle.properties  local.properties
platform/android/app/: build.gradle
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/assets/models/: URLs
platform/android/app/src/main/assets/shaders/: chapter03.frag  chapter04.vert  chapter05.vert  chapter09.vert  guide.frag  guide.vert  guideMVP.vert
platform/android/app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLControllerManager.java
platform/android/app/src/main/res/values/: strings.xml
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/apple/: build-ios.sh  build-mac.sh
platform/apple/ios/: Info.plist
platform/emscripten/: build-web.ps1  launch-web.ps1  launch.py
web-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  TracyTargets.cmake  build.ninja  cmake_install.cmake  compile_commands.json
web-build/.cmake/api/v1/reply/: cache-v2-3e0cd59140a5473c93ba.json  cmakeFiles-v1-8e2d018ef86eed7bec45.json  codemodel-v2-5665f16da47c5e6b46f1.json  directory-_deps.assimp-build-Debug-b487a2776c8ab336de80.json  directory-_deps.assimp-build.code-Debug-1af82b3027d5edaf15a5.json  directory-_deps.assimp-build.contrib.zlib-Debug-944dcbe3da54f05fad00.json  directory-_deps.glm-build-Debug-6d15e69980657a622af7.json  directory-_deps.glm-build.glm-Debug-a23f95ebb42eb382e7b0.json  directory-_deps.sdl3-build-Debug-f8033627b3963e96d1ae.json  directory-_deps.spdlog-build-Debug-ff771ffcf6c6a51accb6.json  directory-_deps.tracy-build-Debug-7750726b28c2bbbe52c5.json  directory-base-Debug-1d1ae84c0bb533863772.json  directory-chapters-Debug-37598d96031ba44ba7c2.json  directory-glad_cmake-Debug-92fd3264d3c0957626e0.json  index-2025-08-21T06-31-55-0678.json  target-CopyAssets-Debug-c1042c8eb84dad106e4b.json  target-OpenGLCourseApp-Debug-f8b8b3cdf28c68c826f6.json  target-SDL3-static-Debug-ee6b9f52ecb724cd2107.json  target-SDL3_test-Debug-14f8788e3867c41e9a4e.json  target-SDL_uclibc-Debug-0ba882cd8d27d8980516.json  target-TracyClient-Debug-1af0d7a42648ce5b57f4.json  target-assimp-Debug-59f12c468123c6838a9f.json  target-base-Debug-fbaa966452fc6d91130b.json  target-glad-Debug-bacb20fd93d5eb285474.json  target-glm-Debug-adedc0d2a845a5862409.json  target-imgui-Debug-23f817d41be2d90f1136.json  target-imgui_impl_opengl3-Debug-12e0e4689cffed6ca3c4.json  target-imgui_impl_sdl3-Debug-2fe57d824d0c2c472881.json  target-spdlog-Debug-ad6c946aa087fddb32b1.json  target-zlibstatic-Debug-8528756706910c43d036.json  toolchains-v1-44c66a0ee82f39c02701.json
web-build/base/: cmake_install.cmake
web-build/chapters/: cmake_install.cmake
web-build/glad_cmake/: cmake_install.cmake
